Fix S3TC size validation for non-webgl contexts

The (formerly) IsValidDXTSize check is specific to the
WEBGL_compressed_texture_s3tc semantics, but doesn't
correspond to constraints in the native extension
(EXT_texture_compression_s3tc), so only apply this check to
WebGL contexts.

BUG=657678
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://chromiumcodereview.appspot.com/2439643003
Cr-Commit-Position: refs/heads/master@{#426529}

Former-commit-id: 6b129d16c110e756516a7ce973faf5432224c4f1